# libpeas

./: .gitignore  configure.ac
libpeas/: Makefile.am  peas-interpreter.c  peas-interpreter.h  peas.h
libpeas-gtk/: Makefile.am  peas-gtk-console-buffer.c  peas-gtk-console-buffer.h  peas-gtk-console-history.c  peas-gtk-console-history.h  peas-gtk-console.c  peas-gtk-console.h  peas-gtk.h
po/: POTFILES.in
tests/: Makefile.am  Makefile.am.tests
tests/libpeas/: Makefile.am  engine.c  extension-set.c  extension.c
tests/libpeas-gtk/: Makefile.am  console.c
tests/plugins/: Makefile.am
tests/plugins/has-dep/: Makefile.am  has-dep-plugin.c  has-dep-plugin.h  has-dep.plugin
tests/plugins/invalid-iage/: Makefile.am  invalid-iage-plugin.c  invalid-iage-plugin.h  invalid-iage.plugin
tests/plugins/loadable/: Makefile.am  loadable-plugin.c  loadable-plugin.h  loadable.plugin
tests/plugins/self-dep/: Makefile.am  self-dep-plugin.c  self-dep-plugin.h  self-dep.plugin
tests/plugins/unavailable/: Makefile.am  unavailable-plugin.c  unavailable-plugin.h  unavailable.plugin
tests/testing/: Makefile.am  testing-engine.c  testing-engine.h  testing-interpreter.c  testing-interpreter.h  testing-unimplementable.c  testing-unimplementable.h  testing.h
